[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_utils"
version = "0.1.0"
packages = [{include = "data_utils", from = "src"}]
authors = [{ name = "Josephydu", email = "josephyou@tencent.com" }]
description = "A dataset process tool repo used by josephyou."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["data", "utils"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/josephydu/data_utils"
